Switch to S3 hosting

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -43,7 +43,7 @@ body {
 		height: 168.75vw; // height of single svg is 18.75vw * 9
 		display: block;
 		text-indent: -9999em;
-		background-image: url('/images/svg-sooncome.svg');
+		background-image: url('https://trustfulrobot-landingpage.s3.us-east-2.amazonaws.com/svg-sooncome.svg');
 		background-repeat: repeat-y;
 		animation: slide 10s linear infinite, blur 17s linear infinite;
 		// opacity: 0.5;
