--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,9 +1,3 @@
-:root {
-	--shadows: 								#4e2165;
-	--highlights: 						#51dce9;
-	--shadows-blend-mode: 		lighten;
-	--highlights-blend-mode: 	darken;
-}
 body {
 	margin: 0;
 	padding: 0;
@@ -26,28 +20,6 @@ main {
 	display: block;
 	position: relative;
 	filter: grayscale(0.618);
-	// &:before {
-	// 	content: '';
-	// 	position: absolute;
-	// 	left: 0;
-	// 	top: 0;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	z-index: 100;
-	// 	mix-blend-mode: var(--highlights-blend-mode);
-	// 	background-color: var(--highlights);
-	// }
-	// &:after {
-	// 	content: '';
-	// 	position: absolute;
-	// 	left: 0;
-	// 	top: 0;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	z-index: 100;
-	// 	mix-blend-mode: var(--shadows-blend-mode);
-	// 	background-color: var(--shadows);
-	// }
 }
 .foreground, .background {
 	position: absolute;
@@ -61,9 +33,11 @@ main {
 }
 .foreground {
 	z-index: 100;
+	animation: fadein 6s ease-out;
 }
 .background {
 	z-index: 10;
+	filter: blur(2px);
 }
 .sooncome {
 	position: absolute;
@@ -72,7 +46,6 @@ main {
 	display: block;
 	overflow: hidden;
 	z-index: 50;
-	opacity: 0.618;
 	span {
 		position: absolute;
 		width: 100vw;
@@ -114,4 +87,12 @@ main {
   100%{
     filter: blur(10px);
   }
+}
+@keyframes fadein {
+	0%{
+		opacity: 0;
+	}
+	100%{
+		opacity: 1;
+	}
 }
