--- a/src/sass/elements.scss
+++ b/src/sass/elements.scss
@@ -4,6 +4,7 @@ body {
 	width: 100%;
 	min-height: 100vh;
 	display: block;
+	font-family: 'HalvarEngschrift', Helvetica, sans-serif;
 }
 main {
 	width: 100%;
