--- a/src/sass/elements.scss
+++ b/src/sass/elements.scss
@@ -1,20 +1,30 @@
 body {
 	margin: 0;
-	padding: 0;
 	width: 100%;
 	min-height: 100vh;
 	display: block;
-	font-family: 'HalvarEngschrift', Helvetica, sans-serif;
+	font-family: 'HalvarEngschrift', 'Helvetica', sans-serif;
+	line-height: 1.4;
+	font-size: 1.125em;
 }
 main {
-	width: 100%;
-	height: 100vh;
-	overflow: hidden;
-	display: block;
-	position: relative;
-	filter: grayscale(0.618);
+	padding: 2rem;
+}
+h1 {
+	border: 1px solid red;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 h2 {
   font-weight: 700;
   font-style: italic;
+  text-transform: uppercase;
+  border: 1px solid red;
+  margin-top: 0;
+  padding-top: 0;
+}
+h3 {
+	font-weight: 700;
+	font-style: normal;
+	text-transform: uppercase;
 }
