--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -1,8 +1,8 @@
 .container {
 	width: 100%;
-	height: 100vh;
-	overflow: hidden;
 	display: block;
 	position: relative;
 	z-index: 1;
+	// border: 1px solid red;
+	min-height: 100vh;
 }
