Set up tablet layout; colors

--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -1,8 +1,56 @@
+@import "variables";
+@import "colors";
+@import "fonts";
+@import "elements";
 .container {
 	width: 100%;
 	display: block;
 	position: relative;
 	z-index: 1;
-	// border: 1px solid red;
 	min-height: 100vh;
+}
+.tr_block {
+	padding: 2rem 2rem 4rem 2rem;
+	color: $tr_black;
+	background-color: $tr_white;
+	font-size: 0.8em;
+}
+
+
+.tr_block__intro {
+	font-size: 1em;
+}
+.tr_block__technology {
+	color: $tr_black;
+	background-color: $tr_grey_lt;
+	section {
+		margin-bottom: 4em;
+		h3 {
+			margin-top: 0;
+		}
+	}
+}
+
+.tr_block__work {
+	color: $tr_black;
+	background-color: $tr_accent_1;
+	section {
+		margin-bottom: 4em;
+		h3 {
+			margin-top: 0;
+		}
+	}
+}
+
+
+@media all and (min-width: $width_tablet) {
+	.tr_block {
+		padding: 2rem 3rem 4rem 3rem;
+	}	
+	.tr_block__work {
+		grid-column: 1 / span 2;
+	}
+	.tr_block__contact {
+		grid-column: 1 / span 2;
+	}
 }
