--- a/src/sass/elements.scss
+++ b/src/sass/elements.scss
@@ -4,27 +4,54 @@ body {
 	min-height: 100vh;
 	display: block;
 	font-family: 'HalvarEngschrift', 'Helvetica', sans-serif;
-	line-height: 1.4;
-	font-size: 1.125em;
+	line-height: 1.23;
+	font-size: 1em;
 }
 main {
-	padding: 2rem;
+	font-size: calc(1.125em + 0.5vw);
 }
 h1 {
-	border: 1px solid red;
-	margin-bottom: 0;
+	margin-bottom: 3rem;
 	padding-bottom: 0;
+	img {
+		display: block;
+		width: 90%;
+		max-width: 12em;
+	}
 }
 h2 {
   font-weight: 700;
   font-style: italic;
+	font-size: 2em;
   text-transform: uppercase;
-  border: 1px solid red;
-  margin-top: 0;
+  margin-top: 0.75em;
+  margin-bottom: 2em;
   padding-top: 0;
 }
 h3 {
-	font-weight: 700;
+	font-weight: 400;
 	font-style: normal;
+	font-size: 1.25em;
+	line-height: 1.1em;
 	text-transform: uppercase;
+	letter-spacing: 0.025em;
+	margin-top: 0;
+}
+ul {
+	padding-left: 1em;
+	li {
+		padding: 0.25em 0 0.25em 0;
+	}
+}
+@media all and (min-width: $width_tablet) {
+	main {
+		display: grid;
+		grid-template-columns: minmax(0, 3fr) minmax(0, 2fr);
+	}
+	.tr_block__work {
+		grid-column: 1 / span 2;
+	}
+	.tr_block__contact {
+		grid-column: 1 / span 2;
+	}
 }
