--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -1,7 +1,7 @@
 $tr_black:					#4C443D;
 $tr_white:					#F2F4F3;
 
-$tr_grey_lt:				#C1BDB3;
+$tr_grey_lt:				#ADACB5;
 $tr_grey_dk:				#7F7979;
 
-$tr_accent_1:				#5F5B6B;
+$tr_accent_1:				#48ACF0;
