--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -20,9 +20,9 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'HalvarEngschrift';
-  src: url('/fonts/Halvar-Engschrift-Bold-SuperSlanted.woff2') format('woff2'),
-       url('/fonts/Halvar-Engschrift-Bold-SuperSlanted.woff') format('woff');
+  font-family: 'HalvarMittleschrift';
+  src: url('/fonts/Halvar-Mittleschrift-Bold.woff2') format('woff2'),
+       url('/fonts/Halvar-Mittleschrift-Bold.woff') format('woff');
   font-weight: 700;
-  font-style: italic;
+  font-style: normal;
 }
