--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -21,7 +21,7 @@
 	font-size: 1em;
 }
 .tr_block__technology {
-	color: $tr_black;
+	color: $tr_white;
 	background-color: $tr_grey_lt;
 	section {
 		margin-bottom: 4em;
@@ -32,7 +32,7 @@
 }
 
 .tr_block__work {
-	color: $tr_black;
+	color: $tr_white;
 	background-color: $tr_accent_1;
 	section {
 		margin-bottom: 4em;
