Finalize colors and typefaces

--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -1,7 +1,8 @@
 $tr_black:					#4C443D;
 $tr_white:					#F2F4F3;
 
-$tr_grey_lt:				#ADACB5;
-$tr_grey_dk:				#7F7979;
+$tr_grey_lt:				#DADCDB;
+$tr_grey_dk:				#536273;
 
-$tr_accent_1:				#48ACF0;
+$tr_accent_1:				#000807;
+$tr_accent_2:				#49C6E5;
