--- a/src/sass/elements.scss
+++ b/src/sass/elements.scss
@@ -20,10 +20,11 @@ h1 {
 	}
 }
 h2 {
+	font-family: 'HalvarMittelschrift';
   font-weight: 700;
-  font-style: italic;
+  font-style: normal;
 	font-size: 2em;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   margin-top: 0.75em;
   margin-bottom: 2em;
   padding-top: 0;
@@ -33,8 +34,6 @@ h3 {
 	font-style: normal;
 	font-size: 1.25em;
 	line-height: 1.1em;
-	text-transform: uppercase;
-	letter-spacing: 0.025em;
 	margin-top: 0;
 }
 ul {
@@ -43,6 +42,13 @@ ul {
 		padding: 0.25em 0 0.25em 0;
 	}
 }
+a, a:visited {
+	color: $tr_accent_1;
+	&:hover {
+		color: $tr_accent_2;
+	}
+}
+
 @media all and (min-width: $width_tablet) {
 	main {
 		display: grid;
