Finalize link hover

--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -5,4 +5,4 @@ $tr_grey_lt:				#DADCDB;
 $tr_grey_dk:				#536273;
 
 $tr_accent_1:				#000807;
-$tr_accent_2:				#49C6E5;
+$tr_accent_2:				#256D86;
