--- a/src/sass/elements.scss
+++ b/src/sass/elements.scss
@@ -8,7 +8,7 @@ body {
 	font-size: 1em;
 }
 main {
-	font-size: calc(1.125em + 0.6vw);
+	font-size: calc(1.125em + 0.9vw);
 }
 h1 {
 	margin-top: 0;
@@ -52,8 +52,18 @@ a, a:visited {
 }
 
 @media all and (min-width: $width_tablet) {
+	h1 {
+		img {
+			width: 100%;
+		}
+	}
+	h2 {
+		margin-top: -0.15rem; // to visually / vertically line up with h1 image
+		font-size: 1.5em;
+	}
 	main {
 		display: grid;
-		grid-template-columns: minmax(0, 3fr) minmax(0, 2fr);
+		grid-template-columns: minmax(0, 7fr) minmax(0, 5fr);
+		font-size: calc(1.125em + 0.7vw);
 	}
 }
