--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -33,6 +33,24 @@
 	background-color: $tr_accent_1;
 	section {
 		margin-bottom: 4em;
+		display: grid;
+		grid-template-columns: minmax(0, 2fr) minmax(0, 3fr);
+		grid-gap: 2rem;
+		font-size: 1.125em;
+		line-height: 1.3;
+	}
+	a, a:visited {
+		color: $tr_white;
+	}
+	h4 {
+		margin-top: 0;
+		font-family: 'HalvarMittelschrift';
+	  font-weight: 700;
+	  font-style: normal;
+	}
+	ul {
+		list-style: none;
+		padding-left: 0;
 	}
 }
 .tr_block__instagram {
@@ -77,6 +95,21 @@
 	#worklist {
 		ul {
 			margin-top: 0;
+		}
+	}
+}
+
+@media all and (min-width: $width_desktop_1) {
+	.tr_block__work {
+		section {
+			grid-template-columns: minmax(0, 1fr);
+		}
+	}
+	#worklist {
+		ul {
+			display: grid;
+			grid-template-columns: repeat(4, minmax(0, 1fr));
+			grid-gap: 4rem;
 		}
 	}
 }
