--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -56,8 +56,6 @@
 .tr_block__instagram {
 	color: $tr_grey_lt;
 	background-color: $tr_grey_dk;
-	display: none;
-	visibility: hidden;
 }
 
 .tr_block__contact {
@@ -73,6 +71,9 @@
 		font-family: 'HalvarMittelschrift';
 	  font-weight: 700;
 	  font-style: normal;
+	}
+	h2 {
+		color: $tr_accent_1;
 	}
 }
 
