Finish styling enough for launch

--- a/src/sass/elements.scss
+++ b/src/sass/elements.scss
@@ -68,3 +68,33 @@ a, a:visited {
 		font-size: calc(1.125em + 0.7vw);
 	}
 }
+
+@media all and (min-width: $width_desktop_1) {
+	h1 {
+		img {
+			display: block;
+			width: 75%;
+			max-width: 8em;
+		}
+	}
+}
+
+@media all and (min-width: 1440px) {
+	main {
+		grid-template-columns: minmax(0, 8fr) minmax(0, 4fr);
+	}
+}
+
+@media all and (min-width: 1800px) {
+	main {
+		font-size: calc(1.125em + 0.4vw);
+		grid-template-columns: minmax(0, 9fr) minmax(0, 3fr);
+	}
+	h1 {
+		img {
+			display: block;
+			width: 60%;
+			max-width: 25rem; // 400/16
+		}
+	}
+}
