--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -46,6 +46,9 @@
 		position: relative;
 		width: 100%;
 		height: 100%;
+		img {
+			object-fit: contain !important;
+		}
 	}
 	.workdetails {
 		display: grid;
