--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -46,8 +46,8 @@
 		position: relative;
 		width: 100%;
 		height: 100%;
-		img {
-			object-fit: contain !important;
+		.gatsby-image-wrapper {
+			overflow: visible !important;
 		}
 	}
 	.workdetails {
