--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -47,7 +47,9 @@
 		width: 100%;
 		height: 100%;
 		.gatsby-image-wrapper {
-			overflow: visible !important;
+			& div:first-child {
+				padding-bottom: 177.84986% !important;
+			}
 		}
 	}
 	.workdetails {
@@ -139,6 +141,13 @@
 		section {
 			font-size: 1.125em;
 		}
+		.workimage__wrapper {
+			.gatsby-image-wrapper {
+				& div:first-child {
+					padding-bottom: 133.33333% !important;
+				}
+			}
+		}
 	}
 	#worklist {
 		ul {
@@ -156,6 +165,13 @@
 	.tr_block__work {
 		section {
 			grid-template-columns: minmax(0, 1fr);
+		}
+		.workimage__wrapper {
+			.gatsby-image-wrapper {
+				& div:first-child {
+					padding-bottom: 63.24666% !important;
+				}
+			}
 		}
 	}
 	#worklist {
