--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -4,6 +4,7 @@
        url('/fonts/Halvar-Engschrift-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'HalvarEngschrift';
@@ -11,6 +12,7 @@
        url('/fonts/Halvar-Engschrift-Regular-Slanted.woff') format('woff');
   font-weight: 400;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'HalvarEngschrift';
@@ -18,6 +20,7 @@
        url('/fonts/Halvar-Engschrift-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'HalvarMittelschrift';
@@ -25,4 +28,5 @@
        url('/fonts/Halvar-Mittelschrift-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
