--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -46,6 +46,30 @@
 		position: relative;
 		width: 100%;
 		height: 100%;
+		a {
+			display: block;
+			position: relative;
+			&:before {
+				content: "";
+				display: block;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				background-color: transparent;
+				z-index: +1;
+				transition: background-color 6s $easeout;
+				mix-blend-mode: overlay;
+			}
+			&:hover {				
+				&:before {
+					background-color: $tr_accent_2;
+					transition: background-color 6s $easeout;
+					mix-blend-mode: overlay;
+				}
+			}
+		}
 		.gatsby-image-wrapper {
 			& div:first-child {
 				padding-bottom: 177.84986% !important;
@@ -77,6 +101,32 @@
 .tr_block__instagram {
 	color: $tr_grey_lt;
 	background-color: $tr_grey_dk;
+	ul {
+		a {
+			position: relative;
+			display: block;
+			&:before {
+				content: "";
+				display: block;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				background-color: transparent;
+				z-index: +1;
+				transition: background-color 6s $easeout;
+				mix-blend-mode: overlay;
+			}
+			&:hover {				
+				&:before {
+					background-color: $tr_accent_2;
+					transition: background-color 6s $easeout;
+					mix-blend-mode: overlay;
+				}
+			}
+		}
+	}
 }
 
 .tr_block__instagram {
@@ -98,6 +148,9 @@
 		  font-weight: 700;
 		  font-style: normal;
 		  color: $tr_white;
+		  &:hover {
+		  	color: $tr_accent_1;
+		  }
 		}
 	}
 }
