--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -174,6 +174,11 @@
 	}
 }
 
+.tr_block__origin {
+	// width: 100%;
+	margin-top: 1000vh;
+}
+
 
 @media all and (min-width: $width_tablet) {
 	.tr_block {
@@ -182,7 +187,7 @@
 		grid-template-columns: minmax(0, 1fr);
 		grid-template-rows: 8rem auto;
 	}	
-	.tr_block__work, .tr_block__instagram, .tr_block__contact {
+	.tr_block__work, .tr_block__instagram, .tr_block__contact, .tr_block__origin {
 		grid-column: 1 / -1;
 	}
 	#introtext {
