--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -175,8 +175,16 @@
 }
 
 .tr_block__origin {
-	// width: 100%;
 	margin-top: 1000vh;
+	h3, h4, p, ol {
+		max-width: 35em;
+	}
+	h4 {
+		margin-top: 4em;
+	}
+	ol li {
+		margin-bottom: 1em;
+	}
 }
 
 
