--- a/src/sass/trustfulrobot.scss
+++ b/src/sass/trustfulrobot.scss
@@ -182,8 +182,12 @@
 	h4 {
 		margin-top: 4em;
 	}
-	ol li {
-		margin-bottom: 1em;
+	ol {
+		margin-left: 0;
+		padding-left: 1em;
+		li {
+			margin-bottom: 1em;
+		}
 	}
 }
 
